# S4Reader

./: .gitignore  Cargo.toml  composition.wac  devenv.nix  flake.nix  rust-toolchain.toml
compression/: Cargo.toml
compression/src/: bindings.rs  bitreader.rs  lib.rs
doc/: gfx.md
docs/: map.md
encryption/: Cargo.toml
encryption/src/: bindings.rs  lib.rs
game/: Cargo.toml
game/src/: main.rs
gfx/src/: archive.rs  mod.rs
map/: BadSurprise.map  Cargo.toml  Conspiracy.map  Cordoba.map  DarkThunder.map  Fledermaus.map  Fortress.map  Golden Land.map  Karthago.map  LanoEstacado.map  Papilion.map  Phoenix.map  SearchofMjoelnir.map
map/src/: bindings.rs  lib.rs
path/: Cargo.toml
path/src/: lib.rs
s4/src/: lib.rs
s4reader/: Cargo.toml
s4reader/map/: Aeneas.map  AllGreen.map  Assimilate.map  Bahlum-Kuk.map  Camelot.map  CoastofDeath.map  FearFortress.map  Flying Horror.map  FreedomForce.map  Grand Thief Settlers.map  Harbour Island.map  Harbour.map  Himalaya.map  Limes.map  MagicBarbarian.map  Meteors.map  MiddleIslands.map  Mislead Alliance.map  Monster.map  NewStart.map  Pathes.map  SettleDown.map  Sherwoodforest.map  Surrounded.map  TheCross.map  Wacah Chan.map
s4reader/src/: ara_crypt.rs  bitreader.rs  bitwriter.rs  decompress.rs  lib.rs  main.rs  map_file.rs
settlers/: Cargo.toml
settlers/src/: building.rs  ground.rs  info.rs  lib.rs  map.rs  object.rs  player.rs  preview.rs  settler.rs  stack.rs  team.rs  victory_cond.rs
src/: ara_crypt.rs  building.rs  decompress.rs  ground.rs  lib.rs  main.rs  map.rs  settler.rs  stack.rs
src/crypt/: mod.rs
src/decompress/: bitreader.rs  bitwriter.rs  decompress.rs
src/gfx/: graphic.rs  mod.rs  palette_index_list.rs
src/io/: ara_crypt.rs  bitreader.rs  mod.rs
src/map/: file.rs  mod.rs  player.rs  team.rs
wit/compression/: world.wit
wit/gfx/: world.wit
(+24 files in other folders)
