[package]
name = "settlers-compression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["extract"]
extract = []

[dependencies]
byteorder = "1.4"
num_enum = "0.6"
serde = { version = "1.0.210", features = ["derive"]}

[target.'cfg(all(feature = "extract"))'.dependencies]
png = "0.17.13"
