[package]
name = "encryption"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.37.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "s4:encryption"

[package.metadata.component.dependencies]

[package.metadata.component.target]
path = "../wit/encryption"
world = "encryption"